// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ResourceList default 1`] = `
<div
  className="storybook-container"
>
  <section
    className="bx--structured-list bx--structured-list--border bx--structured-list--selection ResourceList__ResourceListSection-sc-27rnbq-0 gAnvjz"
    data-testid="resource-list"
  >
    <div
      className="bx--structured-list-tbody"
    >
      <label
        aria-label="Item A"
        className=" bx--structured-list-row"
        data-testid="resource-list-row-row-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
        >
          <strong>
            Item A
          </strong>
        </div>
        <div
          className="bx--structured-list-td"
        >
          Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
        </div>
        <input
          checked={false}
          className="bx--structured-list-input"
          readOnly={true}
          tabIndex={-1}
          title="Item A"
          type="radio"
          value="Item A"
        />
        <div
          className="bx--structured-list-td"
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
          <svg
            className="bx--structured-list-svg"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.646-10.854L6.75 10.043 4.354 7.646l-.708.708 3.104 3.103 5.604-5.603-.708-.708z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </label>
      <label
        aria-label="Item B"
        className=" bx--structured-list-row"
        data-testid="resource-list-row-row-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={1}
      >
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
        >
          <strong>
            Item B
          </strong>
        </div>
        <div
          className="bx--structured-list-td"
        >
          Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
        </div>
        <input
          checked={false}
          className="bx--structured-list-input"
          readOnly={true}
          tabIndex={-1}
          title="Item B"
          type="radio"
          value="Item B"
        />
        <div
          className="bx--structured-list-td"
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
          <svg
            className="bx--structured-list-svg"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.646-10.854L6.75 10.043 4.354 7.646l-.708.708 3.104 3.103 5.604-5.603-.708-.708z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </label>
      <label
        aria-label="Item C"
        className=" bx--structured-list-row"
        data-testid="resource-list-row-row-2"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={2}
      >
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
        >
          <strong>
            Item C
          </strong>
        </div>
        <div
          className="bx--structured-list-td"
        >
          Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed. Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
        </div>
        <input
          checked={false}
          className="bx--structured-list-input"
          readOnly={true}
          tabIndex={-1}
          title="Item C"
          type="radio"
          value="Item C"
        />
        <div
          className="bx--structured-list-td"
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
          <svg
            className="bx--structured-list-svg"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.646-10.854L6.75 10.043 4.354 7.646l-.708.708 3.104 3.103 5.604-5.603-.708-.708z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </label>
    </div>
  </section>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ResourceList with action 1`] = `
<div
  className="storybook-container"
>
  <section
    className="bx--structured-list bx--structured-list--border bx--structured-list--selection ResourceList__ResourceListSection-sc-27rnbq-0 gAnvjz"
    data-testid="resource-list"
  >
    <div
      className="bx--structured-list-tbody"
    >
      <label
        aria-label="Item A"
        className=" bx--structured-list-row"
        data-testid="resource-list-row-row-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
      >
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
        >
          <strong>
            Item A
          </strong>
        </div>
        <div
          className="bx--structured-list-td"
        >
          Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap ResourceList__CustomActionDiv-sc-27rnbq-2 gHaTLR"
          role="presentation"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--ghost"
            data-testid="resource-list-custom-action-row-0"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            type="button"
          >
            Configure
            <svg
              aria-hidden={true}
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 26H30V28H2zM25.4 9c.8-.8.8-2 0-2.8 0 0 0 0 0 0l-3.6-3.6c-.8-.8-2-.8-2.8 0 0 0 0 0 0 0l-15 15V24h6.4L25.4 9zM20.4 4L24 7.6l-3 3L17.4 7 20.4 4zM6 22v-3.6l10-10 3.6 3.6-10 10H6z"
              />
            </svg>
          </button>
        </div>
      </label>
      <label
        aria-label="Item B"
        className=" bx--structured-list-row"
        data-testid="resource-list-row-row-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
      >
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
        >
          <strong>
            Item B
          </strong>
        </div>
        <div
          className="bx--structured-list-td"
        >
          Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap ResourceList__CustomActionDiv-sc-27rnbq-2 gHaTLR"
          role="presentation"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--ghost"
            data-testid="resource-list-custom-action-row-1"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            type="button"
          >
            Configure
            <svg
              aria-hidden={true}
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 26H30V28H2zM25.4 9c.8-.8.8-2 0-2.8 0 0 0 0 0 0l-3.6-3.6c-.8-.8-2-.8-2.8 0 0 0 0 0 0 0l-15 15V24h6.4L25.4 9zM20.4 4L24 7.6l-3 3L17.4 7 20.4 4zM6 22v-3.6l10-10 3.6 3.6-10 10H6z"
              />
            </svg>
          </button>
        </div>
      </label>
      <label
        aria-label="Item C"
        className=" bx--structured-list-row"
        data-testid="resource-list-row-row-2"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={-1}
      >
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
        >
          <strong>
            Item C
          </strong>
        </div>
        <div
          className="bx--structured-list-td"
        >
          Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed. Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap ResourceList__CustomActionDiv-sc-27rnbq-2 gHaTLR"
          role="presentation"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--ghost"
            data-testid="resource-list-custom-action-row-2"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            type="button"
          >
            Configure
            <svg
              aria-hidden={true}
              className="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height={16}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 26H30V28H2zM25.4 9c.8-.8.8-2 0-2.8 0 0 0 0 0 0l-3.6-3.6c-.8-.8-2-.8-2.8 0 0 0 0 0 0 0l-15 15V24h6.4L25.4 9zM20.4 4L24 7.6l-3 3L17.4 7 20.4 4zM6 22v-3.6l10-10 3.6 3.6-10 10H6z"
              />
            </svg>
          </button>
        </div>
      </label>
    </div>
  </section>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/List/ResourceList with extra content 1`] = `
<div
  className="storybook-container"
>
  <section
    className="bx--structured-list bx--structured-list--border bx--structured-list--selection ResourceList__ResourceListSection-sc-27rnbq-0 gAnvjz"
    data-testid="resource-list"
  >
    <div
      className="bx--structured-list-tbody"
    >
      <label
        aria-label="Item A"
        className=" bx--structured-list-row"
        data-testid="resource-list-row-row-0"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="bx--structured-list-td"
        >
          <div>
            <h5>
              row-0
            </h5>
            <svg
              aria-hidden={true}
              fill="currentColor"
              focusable="false"
              height={32}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={32}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 10a6 6 0 00-6 6v8a6 6 0 0012 0V16A6 6 0 0016 10zm-4.25 7.87h8.5v4.25h-8.5zM16 28.25A4.27 4.27 0 0111.75 24v-.13h8.5V24A4.27 4.27 0 0116 28.25zm4.25-12.13h-8.5V16a4.25 4.25 0 018.5 0zM30.66 19.21L24 13v9.1a4 4 0 008 0A3.83 3.83 0 0030.66 19.21zM28 24.35a2.25 2.25 0 01-2.25-2.25V17l3.72 3.47h0A2.05 2.05 0 0130.2 22 2.25 2.25 0 0128 24.35zM0 22.1a4 4 0 008 0V13L1.34 19.21A3.88 3.88 0 000 22.1zm2.48-1.56h0L6.25 17v5.1a2.25 2.25 0 01-4.5 0A2.05 2.05 0 012.48 20.54zM15 5.5A3.5 3.5 0 1011.5 9 3.5 3.5 0 0015 5.5zm-5.25 0A1.75 1.75 0 1111.5 7.25 1.77 1.77 0 019.75 5.5zM20.5 2A3.5 3.5 0 1024 5.5 3.5 3.5 0 0020.5 2zm0 5.25A1.75 1.75 0 1122.25 5.5 1.77 1.77 0 0120.5 7.25z"
              />
            </svg>
          </div>
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
        >
          <strong>
            Item A
          </strong>
        </div>
        <div
          className="bx--structured-list-td"
        >
          Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
        </div>
        <input
          checked={false}
          className="bx--structured-list-input"
          readOnly={true}
          tabIndex={-1}
          title="Item A"
          type="radio"
          value="Item A"
        />
        <div
          className="bx--structured-list-td"
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
          <svg
            className="bx--structured-list-svg"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.646-10.854L6.75 10.043 4.354 7.646l-.708.708 3.104 3.103 5.604-5.603-.708-.708z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </label>
      <label
        aria-label="Item B"
        className=" bx--structured-list-row"
        data-testid="resource-list-row-row-1"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={1}
      >
        <div
          className="bx--structured-list-td"
        >
          <div>
            <h5>
              row-1
            </h5>
            <svg
              aria-hidden={true}
              fill="currentColor"
              focusable="false"
              height={32}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={32}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 10a6 6 0 00-6 6v8a6 6 0 0012 0V16A6 6 0 0016 10zm-4.25 7.87h8.5v4.25h-8.5zM16 28.25A4.27 4.27 0 0111.75 24v-.13h8.5V24A4.27 4.27 0 0116 28.25zm4.25-12.13h-8.5V16a4.25 4.25 0 018.5 0zM30.66 19.21L24 13v9.1a4 4 0 008 0A3.83 3.83 0 0030.66 19.21zM28 24.35a2.25 2.25 0 01-2.25-2.25V17l3.72 3.47h0A2.05 2.05 0 0130.2 22 2.25 2.25 0 0128 24.35zM0 22.1a4 4 0 008 0V13L1.34 19.21A3.88 3.88 0 000 22.1zm2.48-1.56h0L6.25 17v5.1a2.25 2.25 0 01-4.5 0A2.05 2.05 0 012.48 20.54zM15 5.5A3.5 3.5 0 1011.5 9 3.5 3.5 0 0015 5.5zm-5.25 0A1.75 1.75 0 1111.5 7.25 1.77 1.77 0 019.75 5.5zM20.5 2A3.5 3.5 0 1024 5.5 3.5 3.5 0 0020.5 2zm0 5.25A1.75 1.75 0 1122.25 5.5 1.77 1.77 0 0120.5 7.25z"
              />
            </svg>
          </div>
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
        >
          <strong>
            Item B
          </strong>
        </div>
        <div
          className="bx--structured-list-td"
        >
          Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
        </div>
        <input
          checked={false}
          className="bx--structured-list-input"
          readOnly={true}
          tabIndex={-1}
          title="Item B"
          type="radio"
          value="Item B"
        />
        <div
          className="bx--structured-list-td"
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
          <svg
            className="bx--structured-list-svg"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.646-10.854L6.75 10.043 4.354 7.646l-.708.708 3.104 3.103 5.604-5.603-.708-.708z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </label>
      <label
        aria-label="Item C"
        className=" bx--structured-list-row"
        data-testid="resource-list-row-row-2"
        onClick={[Function]}
        onKeyDown={[Function]}
        tabIndex={2}
      >
        <div
          className="bx--structured-list-td"
        >
          <div>
            <h5>
              row-2
            </h5>
            <svg
              aria-hidden={true}
              fill="currentColor"
              focusable="false"
              height={32}
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width={32}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 10a6 6 0 00-6 6v8a6 6 0 0012 0V16A6 6 0 0016 10zm-4.25 7.87h8.5v4.25h-8.5zM16 28.25A4.27 4.27 0 0111.75 24v-.13h8.5V24A4.27 4.27 0 0116 28.25zm4.25-12.13h-8.5V16a4.25 4.25 0 018.5 0zM30.66 19.21L24 13v9.1a4 4 0 008 0A3.83 3.83 0 0030.66 19.21zM28 24.35a2.25 2.25 0 01-2.25-2.25V17l3.72 3.47h0A2.05 2.05 0 0130.2 22 2.25 2.25 0 0128 24.35zM0 22.1a4 4 0 008 0V13L1.34 19.21A3.88 3.88 0 000 22.1zm2.48-1.56h0L6.25 17v5.1a2.25 2.25 0 01-4.5 0A2.05 2.05 0 012.48 20.54zM15 5.5A3.5 3.5 0 1011.5 9 3.5 3.5 0 0015 5.5zm-5.25 0A1.75 1.75 0 1111.5 7.25 1.77 1.77 0 019.75 5.5zM20.5 2A3.5 3.5 0 1024 5.5 3.5 3.5 0 0020.5 2zm0 5.25A1.75 1.75 0 1122.25 5.5 1.77 1.77 0 0120.5 7.25z"
              />
            </svg>
          </div>
        </div>
        <div
          className="bx--structured-list-td bx--structured-list-content--nowrap"
        >
          <strong>
            Item C
          </strong>
        </div>
        <div
          className="bx--structured-list-td"
        >
          Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed. Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.Lorem ipsun dolor sit amet, consectetur adipiscing elit. Nunc dui magna, finibus id tortor sed.
        </div>
        <input
          checked={false}
          className="bx--structured-list-input"
          readOnly={true}
          tabIndex={-1}
          title="Item C"
          type="radio"
          value="Item C"
        />
        <div
          className="bx--structured-list-td"
          style={
            Object {
              "verticalAlign": "middle",
            }
          }
        >
          <svg
            className="bx--structured-list-svg"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.646-10.854L6.75 10.043 4.354 7.646l-.708.708 3.104 3.103 5.604-5.603-.708-.708z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </label>
    </div>
  </section>
</div>
`;
